Ajout d'un slider double curseur. Prise en compte de la colonne (facultative) count pour générer la densité

--- a/main.html
+++ b/main.html
@@ -7,12 +7,14 @@
   <link rel="stylesheet" href="css/bootstrap-grid.min.css" crossorigin=""/>
   <link rel="stylesheet" href="css/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=""/>
   <link rel="stylesheet" href="css/Control.Coordinates.css" crossorigin=""/>
+  <link rel="stylesheet" href="css/slider.css" crossorigin=""/>
 
   <script src="js/appli.js"crossorigin=""></script>
   <script src="js/heatmap.min.js"crossorigin=""></script>
   <script src="js/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
   <script src="js/leaflet-heatmap.js"crossorigin=""></script>
   <script src="js/Control.Coordinates.js"crossorigin=""></script>
+  
 
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -23,6 +25,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
+      <br>
       <div id="map"></div>
     </div>
     <div class="col">
@@ -33,16 +36,35 @@
     </div>
   </div>
 </div>
+<br><br>
+
+<div class="container">
+  <div class="row">
+    <div class="col-4">
+  
+      <div class="sliders_control">
+          <input id="fromSlider" type="range" value="0" min="0" max="100"/>
+          <input id="toSlider" type="range" value="10" min="0" max="100"/>
+      </div>
+
+    <div>
+    <input type="file" id="fileInput" onchange="importFile();" /><b><---- FAIRE GLISSER LE FICHIER SCHEMA ICI</b>
+    </div>
+
+    </div>
+    <div class="col-8">
+    </div>
+  </div>
+</div>
 
 <script type="text/javascript">
 var map;
 var heatmapLayer;
 var heatData = [];
-var layers;
 
 var minGdh, maxGdh;
-var sliderSpan;
 var ecartTotal;
+var ecart = 10;
 
 
 window.onload = function() {
@@ -58,16 +80,12 @@ var cfg = {
 heatData = [];
 heatmapLayer = new HeatmapOverlay(cfg);
 
-var baseLayer = L.tileLayer(
-  'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
-//    'http://127.0.0.1:3650/api/tiles/2017-07-03_france_alsace/{z}/{x}/{y}',{
-    attribution: '...',
-    maxZoom: 14
+var baseLayer = L.tileLayer('carto/{z}/{x}/{y}.png',{ //'https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+    maxZoom: 13
 });
 
 map = new L.Map('map', {
-  center: new L.LatLng(48.573, 7.7558), //48.815, 7.700),
-
+  center: new L.LatLng(48.773, 7.7558), //48.815, 7.700),
   zoom: 11,
   layers: [baseLayer, heatmapLayer]
 });
@@ -75,8 +93,8 @@ map = new L.Map('map', {
 var c = new L.Control.Coordinates();
 c.addTo(map);
 
-function onMapClick(e) { c.setCoordinates(e); }
-map.on('mousemove', onMapClick);
+function onMouseMove(e) { c.setCoordinates(e); }
+map.on('mousemove', onMouseMove);
 
 heatmapLayer.setData(GetHeatDataObject(heatData));
 
@@ -84,22 +102,9 @@ heatmapLayer.setData(GetHeatDataObject(heatData));
 
 </script>
 
-<div class="slidecontainer">
-  <input type="number" value="20" id="SpanSize" onchange="ResizeSpan(); updateHeatmap();"> heures - <button onclick="ResizeSpan();">Valider</button><br>
-    <progress id="progressbar" value="0" max="100" style="width: 260px;"></progress>
-<br>
-  
-  <input type="range" min="1" max="20" value="1" class="slider-square" id="myRange"
-  	oninput="updateHeatmap();">
-</div>
-
-
-<div>
-<input type="file" id="fileInput" onchange="importFile();" /><b><---- FAIRE GLISSER LE FICHIER SCHEMA ICI</b>
-</div>
-
-  <script src="js/jquery-3.4.1.js"></script>
-  <script src="js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+<script src="js/slider.js"crossorigin=""></script>
+<script src="js/jquery-3.4.1.js"></script>
+<script src="js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
 
 </body>
 </html>
