Ajout dessin des points. Travail en cours pour changer la couleurs des points selon la valeur d'un attribut

--- a/main.html
+++ b/main.html
@@ -63,9 +63,8 @@ var heatmapLayer;
 var heatData = [];
 
 var minGdh, maxGdh;
-var ecartTotal;
 var ecart = 10;
-
+var layers = [];
 
 window.onload = function() {
 var cfg = {
