--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/Control.Coordinates.css" />
   <link rel="stylesheet" href="css/slider.css" />
 
+  <script src="parametres.js"></script>
   <script src="js/density.js"></script>
   <script src="js/density_filter.js"></script>
   <script src="js/heatmap.min.js"></script>
@@ -25,9 +26,6 @@
     <div class="col">
       <div id="map"></div>
     </div>
-    <div class="col">
-      <div id="info"></div>
-    </div>
   </div>
 </div>
 
@@ -41,31 +39,37 @@
     </div>
   </div>
 
-  <div class="row">
-    <div class="col border">
-      <button data-toggle="collapse" data-target="#config">Afficher paramètres</button>
-      <div id="config" class="collapse">
-        <label for="showPoints"><input type="checkbox" id="showPoints">Montrer les points</label><br>
-        <label for="showHeatmap"><input type="checkbox" id="showHeatmap">Montrer la heatmap</label><br>
-        <label for="filterAllCriteria"><input type="checkbox" id="filterAllCriteria">Le point doit répondre à tous les filtres</label><br>
-        <br>
-        <button onclick="saveConfig();">Enregistrer</button>
+  <div class="row border">
+    <div class="col">
+    <button data-toggle="collapse" data-target="#config">Afficher paramètres</button>
+      
+      <div class="row collapse" id="config">
+        <div class="col-6">
+          <label for="showPoints"><input type="checkbox" id="showPoints">Montrer les points</label><br>
+          <label for="showHeatmap"><input type="checkbox" id="showHeatmap">Montrer la heatmap</label><br>
+          <label for="filterAllCriteria"><input type="checkbox" id="filterAllCriteria">Le point doit répondre à tous les filtres</label><br>
+          <br>
+          <button onclick="saveConfig();">Enregistrer</button>
+        </div>
+        <div class="col-4">
+          <div id="info"></div>
+        </div>
       </div>
     </div>
   </div><br>
 
-  <div class="row">
-    <div class="col border">
+  <div class="row border">
+    <div class="col">
       <button data-toggle="collapse" data-target="#formCouleur">></button>Coloration
       <div id="formCouleur" class="collapse">
         <select id="CouleurColumn" onchange="changeCouleur(this);"></select><br>
-        <select id="CouleurValues" multiple readonly></select>
+        <select id="CouleurValues" multiple disabled></select>
       </div>
     </div>
   </div><br>
 
-  <div class="row">
-    <div class="col border">
+  <div class="row border">
+    <div class="col">
       <button data-toggle="collapse" data-target="#formFilter">></button>Filtres
       <div id="formFilter" class="collapse">
         <select id="filterColumn" onchange="addFormFilter(this);"></select>
@@ -76,8 +80,8 @@
     </div>
   </div><br>
 
-  <div class="row">
-    <div class="col border">
+  <div class="row border">
+    <div class="col">
         <input type="file" id="fileInput" onchange="importFile();" />
       </div>
     </div>
@@ -98,7 +102,7 @@ var tabColor = [ "#3388ff", "#f40600", "#ff9622", "#eff849", "#26cd14", "#00e1d6
 
 var heatmapcfg = {
   //radius = sensibilité de la heatmap. chiffre plus élevé = zone plus étendue
-  "radius": 0.6, //0.01
+  "radius": SENSIBILITE_HEATMAP, //0.6, //0.01
   "maxOpacity": .8,
   "scaleRadius": true,
   "useLocalExtrema": false,
@@ -123,14 +127,11 @@ loadConfig();
 
 heatmapLayer = new HeatmapOverlay(heatmapcfg);
 
-var URL_CARTO = "carto_mali";
-//var URL_CARTO = "https://{s}.tile.openstreetmap.org";
-
 var baseLayer = L.tileLayer(URL_CARTO + '/{z}/{x}/{y}.png', { });
 
 map = new L.Map('map', {
-  center: new L.LatLng(17.92, 0.1), //(48.89,7.8),
-  zoom: 6,
+  center: START_COORDINATES,
+  zoom: START_ZOOM,
   layers: [baseLayer, heatmapLayer]
 });
 
