Ameliorations de l'affichage des filtres et de la coloration

--- a/main.html
+++ b/main.html
@@ -98,11 +98,12 @@ var tabHeaders = [];
 
 var idxColCouleur = 0;
 var dicCouleur = {};
-var tabColor = [ "#3388ff", "#f40600", "#ff9622", "#eff849", "#26cd14", "#00e1d6", "#e100e1", "#a7a7a7" ];
+
+var tabColor = [ "#ff0000", "#ffff00", "#00ff00", "#0080ff", "#ff80c0", "#00ffff", "#004080", "#008000", "#ff8000", "#804000", "#acac59", "#950095", "#c0c0c0"];
+//var tabColor = [ "#3388ff", "#f40600", "#ff9622", "#eff849", "#26cd14", "#00e1d6", "#e100e1", "#a7a7a7" ];
 
 var heatmapcfg = {
-  //radius = sensibilité de la heatmap. chiffre plus élevé = zone plus étendue
-  "radius": SENSIBILITE_HEATMAP, //0.6, //0.01
+  "radius": SENSIBILITE_HEATMAP,
   "maxOpacity": .8,
   "scaleRadius": true,
   "useLocalExtrema": false,
