--- a/main.html
+++ b/main.html
@@ -36,6 +36,7 @@
           <input id="fromSlider" type="range" value="0" min="0" max="100"/>
           <input id="toSlider" type="range" value="10" min="0" max="100"/>
       </div>
+      <canvas id="bandeau" width="400" height="20" style="border:1px solid #eeeeee;"></canvas>
     </div>
   </div>
 
